# enum-ref

./: Cargo.toml  README.md
macro/: Cargo.toml
macro/src/: derive.rs  lib.rs  utils.rs
src/: lib.rs
tests/ui/pass/: basic.rs  generic.rs
