[package]
name = "enum-ref"
version = "0.1.0"
documentation = "https://docs.rs/enum-ref/"
description = "Proc. macro for generating enum discriminant types."
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace.package]
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
repository = "https://github.com/robbepop/enum-ref"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["enum", "wrapper", "ref", "reference"]
categories = ["data-structures", "no-std"]

[dependencies]
enum-ref-macro = { version = "0.1.0", path = "macro" }

[dev-dependencies]
trybuild = { version = "1.0.60", features = ["diff"] }

[workspace]
members = ["macro"]
